<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student.wonder_scale.Home_Screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Weight"
        android:id="@+id/weight"
        android:layout_alignParentTop="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:id="@+id/weightGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Grams"
            android:id="@+id/grams"
            android:checked="true"
            android:onClick="convert"
            android:clickable="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ounces"
            android:id="@+id/ounces"
            android:checked="false"
            android:onClick="convert"
            android:clickable="true"/>
    </RadioGroup>

    <EditText
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/calculatedWeight"
        android:contextClickable="false"
        android:enabled="false"
        android:visibility="visible"
        android:focusable="true"
        android:layout_alignEnd="@+id/autoFoodName"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/weightGroup"
        android:text="@string/_54"
        android:layout_toEndOf="@+id/foodName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Food_Name"
        android:id="@+id/foodName"
        android:layout_below="@id/weightGroup"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoFoodName"
        android:layout_below="@id/foodName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Serving_Size"
        android:id="@+id/servingSize"
        android:layout_below="@id/autoFoodName"/>

    <AutoCompleteTextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/autoServingSize"
        android:layout_below="@id/servingSize"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Calories"
        android:id="@+id/calories"
        android:layout_below="@id/autoServingSize"/>

    <AutoCompleteTextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/autoCalories"
        android:layout_below="@id/calories"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Carbohydrates"
        android:id="@+id/carbs"
        android:layout_below="@id/autoCalories"/>

    <AutoCompleteTextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/autoCarbs"
        android:layout_below="@id/carbs"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/savebtn"
        android:onClick="save"
        android:layout_alignTop="@+id/servingSize"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/autoServingSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reset_Calorie_Count"
        android:id="@+id/resetCalorie"
        android:onClick="reset"
        android:layout_below="@+id/autoCarbs"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/calTotal"
        android:enabled="false"
        android:focusable="true"
        android:visibility="visible"
        android:layout_below="@+id/resetCalorie"
        android:layout_toStartOf="@+id/graph" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/savebtn"
        android:layout_alignEnd="@+id/savebtn"
        android:layout_toEndOf="@+id/autoServingSize" />


</RelativeLayout>
